tests/errors/lifetime/reborrow/out_reborrow_of_mut_precondition_fails.sim

        extern fn sink(r: &out i64);
        fn f(r: &mut i64) {
          s: &out i64;
          entry:
            s = &out r.*;
            s.* = 1;
            call sink(move s);
            return
        }
        