tests/errors/lifetime/reborrow/out_reborrow_of_mut_precondition_fails.err.expected
error: at 6:13: [INIT-BorrowStateMismatch] In function 'f', block 'entry': cannot create &out of '*r': pointee must be uninitialized at borrow, but is initialized
   |
 6 |             s = &out r.*;
   |             ^^^^^^^^^^^^
